[package]
name = "bh1750"
version = "0.1.0"
authors = ["Jona Wilmsmann"]
edition = "2021"
description = "BH1750 light sensor driver using embedded-hal"
repository = "https://github.com/jona-wilmsmann/bh1750-rs"
license = "MIT OR Apache-2.0"

[features]
default = ["blocking"]

blocking = ["dep:embedded-hal"]
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[package.metadata.docs.rs]
features = ["blocking", "async"]
